--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
   </head>
   <body ng-app="app">
-    <h1>Hello</h1>
+    <div class="container">
+      <div ng-view>
+      </div>
+    </div>
     <!-- Latest compiled and minified CSS -->
     <script src="app.module.js"></script>
+    <script src="app.config.js"></script>
+    <script src="layout/topbar.directive.js"></script>
+    <script src="layout/topnav.directive.js"></script>
+    <script src="components/home/home.directive.js"></script>
+    <script src="components/home/home.controller.js"></script>
+    <script src="components/home/example.directive.js"></script>
   </body>
 </html>
