Adds gulp task to concat all js. Moves index to public folder. #1

--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,6 @@
       <div ng-view>
       </div>
     </div>
-    <!-- Latest compiled and minified CSS -->
-    <script src="app.module.js"></script>
-    <script src="app.config.js"></script>
-    <script src="layout/topbar.directive.js"></script>
-    <script src="layout/topnav.directive.js"></script>
-    <script src="components/home/home.directive.js"></script>
-    <script src="components/home/home.controller.js"></script>
-    <script src="components/home/example.directive.js"></script>
+    <script src="all.js"></script>
   </body>
 </html>
