--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,17 @@
     <title>Machine Learning in JavaScript</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/default.css">
+    <link rel="stylesheet" href="/css/prism.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
   </head>
   <body ng-app="app">
+    <topbar></topbar>
     <div class="container">
       <div ng-view>
       </div>
     </div>
+    <script src="prism.js"></script>
     <script src="app.min.js"></script>
   </body>
 </html>
